2002-06-14  Jody Goldberg <jody@gnome.org>

	* functions.c (gnumeric_euro) : add drachma.

2002-05-29  Jody Goldberg <jody@gnome.org>

	* Release 1.1.4

2002-05-03  Morten Welinder  <terra@diku.dk>

	* functions.c (gnumeric_xirr): Put sane limits on the goal search.
